...
    navigateToDetail: (Long) -> Unit
) {
    LazyRow(
        contentPadding = PaddingValues(horizontal = 16.dp),
        horizontalArrangement = Arrangement.spacedBy(8.dp),
        modifier = modifier
            .testTag("ProductList")
    ) {
        items(orderItem) { data ->
            ProductCard(
                name = data.product.name,
                imageUrl = data.product.image,
                price = data.product.price,
...
